updating dapp to dApp

--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -259,7 +259,7 @@ Click on the `Connect wallet` button in the top right corner of the page and sel
 
 Provide your credentials for the wallet, select a funded account, and click `connect`
 
-### Buy Tacos using the dapp
+### Buy Tacos using the dApp
 
 With your wallet connected, you can now interact with the contract entrypoint
 
