Update rpc link to use ecad ghostnet node

--- a/website/docs/config/implicit-accounts.mdx
+++ b/website/docs/config/implicit-accounts.mdx
@@ -42,7 +42,7 @@ The default Taqueria `config.json` provides 5 accounts as shown here:
     "network": {
         "ghostnet": {
             "label": "ghostnet",
-            "rpcUrl": "https://rpc.ghostnet.teztnets.xyz"
+            "rpcUrl": "https://ghostnet.ecadinfra.com"
         }
     },
     "accounts": {
@@ -104,7 +104,7 @@ These accounts will be created and funded automatically when a sandbox starts. A
     "network": {
         "ghostnet": {
             "label": "ghostnet",
-            "rpcUrl": "https://rpc.ghostnet.teztnets.xyz"
+            "rpcUrl": "https://ghostnet.ecadinfra.com"
         }
     },
     "accounts": {
