--- a/website/docs/config/networks.mdx
+++ b/website/docs/config/networks.mdx
@@ -20,7 +20,7 @@ This example shows the configuration for the default network named `ghostnet` th
 "network": {
     "ghostnet": {
         "label": "ghostnet",
-        "rpcUrl": "https://rpc.ghostnet.teztnets.xyz"
+        "rpcUrl": "https://ghostnet.ecadinfra.com"
     }
 },
 ```
@@ -44,7 +44,7 @@ You may manually add another network configuration following the format of the d
 "network": {
     "ghostnet": {
         "label": "ghostnet",
-        "rpcUrl": "https://rpc.ghostnet.teztnets.xyz"
+        "rpcUrl": "https://ghostnet.ecadinfra.com"
     },
     "customnet": {
         "label": "customnet",
