--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -207,7 +207,7 @@ To do so you need to insert the address of the contract into the `/app/App.tsx` 
 
 ```ts /app/src/app.tsx
 function app() {
-  const [rpcUrl, setRpcUrl] = useState("https://rpc.ghostnet.teztnets.xyz");
+  const [rpcUrl, setRpcUrl] = useState("https://ghostnet.ecadinfra.com");
   const [contractAddress, setContractAddress] = useState(
       "KT1CPASSW7rstFQw6vENBkXmG6mJNsDMauTP"
       // getAliasAddress(config, "hello-tacos")
