standardized requirements in website docs

--- a/website/docs/plugins/plugin-jest.mdx
+++ b/website/docs/plugins/plugin-jest.mdx
@@ -6,6 +6,11 @@ title: '@taqueria/plugin-jest'
 
 The `@taqueria/plugin-jest` plugin provides the `taq test` task which provides a means to initialize Jest test directories and run Jest tests
 
+## Requirements
+
+- Taqueria v0.20.2 or later
+- Node.js v16.17.1 or later
+
 ### Installation
 
 To install the Jest plugin on a Taqueria project, run:
