updates to documentation from further comments

--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -34,7 +34,7 @@ Some of the things Taqueria can do for you include:
 
 Taqueria is an extensible, open source plugin based framework and task runner for Tezos development
 
-In more practical terms, Taqueria is a task runner that you can use from the command line order VS Code to quickly accomplish things like starting a sandbox or originating a contract. Taqueria comes with a few basic tasks, but relies on plugins to add tasks that provide complex and domain specific functionality
+In more practical terms, Taqueria is a task runner that you can use from the command line or via VS Code to quickly accomplish things like starting a sandbox or originating a contract. Taqueria comes with a few basic tasks, but relies on plugins to add tasks that provide complex and domain specific functionality
 
 Taqueria has a few major components:
  - A command line interface (CLI) you use in your terminal through a command named `taq`
