--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -24,7 +24,7 @@ In a rush? You can follow the steps below to get up and running immediately:
 
 ## Overview
 
-This scaffold implements a simple full stack Tezos project. It has a React dApp that interacts with a smart contract which stores the number of `available_tacos` and provides a function to buy tacos
+This scaffold implements a simple full stack Tezos project. It has a React dApp that interacts with a smart contract using Taquito. The contract stores the number of `available_tacos` and provides a function to buy tacos
 
 The React dApp uses Beacon Wallet to interact with Tezos wallets in the browser and once connected, will display the number of `available_tacos` stored on-chain in the smart contract. There is also a basic interface which allows the user to buy tacos by sending a transaction to the smart contract with the `number_of_tacos_to_buy` as a parameter
 
