--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,6 +2,15 @@
 title: Taqueria Releases
 ---
 
+## Taqueria v0.22.0  
+
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | Oct 29, 2022  |
+|Release Type | Minor         |
+|Release Page | [v0.20.0](https://github.com/ecadlabs/taqueria/releases/tag/v0.20.2) |
+
+
 ## Taqueria v0.20.2  
 
 | Details     |               |
