Add ghostnet as a pre-configured testnet (#1316)
* Update funding mechanism

* Update test to have the PKH tz3P5zrUYGJnryVfZ5JFeLMMojdjQFGLUFiK in test config files

* Make faucet actually optional in Zod

* Skip outdated tests

* Refined messaging for funding

* Update message in e2e test

* Add ghostnet as a pre-configured testnet to Taqueria config file on init

* Update doc related to ghostnet addition

* Change net to different node

* Update rpc link to use ecad ghostnet node

* update lock

* added logging to taq test call in test

* removed optional call on config arguments and added protocol to default config.json

* The @taqueria/protocol package got accidentally updated to @taqueria/taqueria

* revert prev commit

* Remove outdated test content

* Add delay before removing the test directory to give test cases time to finish

* Ensure that all test cases with the jest spec use the local package, but our regression for ensuring that ts-jest exists should use a packed version

* Ensure that all test cases with the jest spec use the local package, but our regression for ensuring that ts-jest exists should use a packed version

Co-authored-by: Alexander Zbusko <alexander.zbusko@gmail.com>
Co-authored-by: Houston <32914364+hu3man@users.noreply.github.com>
Co-authored-by: Michael Weichert <mweichert@gmail.com>

--- a/website/docs/config/implicit-accounts.mdx
+++ b/website/docs/config/implicit-accounts.mdx
@@ -21,6 +21,14 @@ The default Taqueria `config.json` provides 5 accounts as shown here:
         "default": "development",
         "development": {
             "networks": [],
+            "sandboxes": [
+                "local"
+            ]
+        },
+        "testing": {
+            "networks": [
+                "ghostnet"
+            ],
             "sandboxes": []
         }
     },
@@ -31,7 +39,12 @@ The default Taqueria `config.json` provides 5 accounts as shown here:
             "rpcUrl": "http://localhost:20000"
         }
     },
-    "network": {},
+    "network": {
+        "ghostnet": {
+            "label": "ghostnet",
+            "rpcUrl": "https://ghostnet.ecadinfra.com"
+        }
+    },
     "accounts": {
         "bob": "3_000_000_000",
         "alice": "3_000_000_000",
@@ -60,10 +73,13 @@ These accounts will be created and funded automatically when a sandbox starts. A
             "networks": [],
             "sandboxes": [
                 "local"
+            ]
+        },
+        "testing": {
+            "networks": [
+                "ghostnet"
             ],
-            "storage": {
-                "example.tz": 42
-            }
+            "sandboxes": []
         }
     },
     "sandbox": {
@@ -85,7 +101,12 @@ These accounts will be created and funded automatically when a sandbox starts. A
             "rpcUrl": "http://localhost:20000"
         }
     },
-    "network": {},
+    "network": {
+        "ghostnet": {
+            "label": "ghostnet",
+            "rpcUrl": "https://ghostnet.ecadinfra.com"
+        }
+    },
     "accounts": {
         "bob": "3_000_000_000",
         "alice": "3_000_000_000"
