updating NFT scaffold to match taco shop WIP

--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -47,10 +47,10 @@ The project comes pre-configured with the following:
 
 ## Requirements
 
-- Taqueria v0.16.0 or later
-- Docker v0.9 or later
-- Node.js v16 or later
-- Beacon or Kukai Wallet
+- Taqueria v0.20.2 or later
+- Docker v20.10.12 or later
+- Node.js v16.17.1 or later
+- Temple Wallet (can be found [here](https://templewallet.com/))
 - A funded testnet account (instructions [here](https://taqueria.io/docs/config/networks/#faucets))
 
 
