--- a/website/docs/scaffolds/nft-scaffold.mdx
+++ b/website/docs/scaffolds/nft-scaffold.mdx
@@ -15,21 +15,65 @@ title: The NFT Scaffold Project
 The NFT-Scaffold project is currently in alpha. It is not ready for production use and will be undergoing frequent updates as we work to implement Taqueria State and other features that have not yet been released
 :::
 
-## Project Setup 
+## Quickstart
 
-1. Scaffold the project by running:
+In a rush? You can follow the steps below to get up and running immediatley:
 
-```bash
-taq scaffold https://github.com/ecadlabs/taqueria-scaffold-nft nft-quickstart
-```
+### Scaffold and Initialize the Project
 
-2. Change into the `/taqueria` directory inside the newly created project directory:
+1. `taq scaffold https://github.com/ecadlabs/taqueria-scaffold-nft nft-scaffold`
+1. `cd nft-scaffold`
+1. `npm run setup`
+1. `cd taqueria`
+1. `touch .env`
+1. Get your Pinata JWT token from your [Pinata account](https://app.pinata.cloud/signin)
+1. Insert the JWT from Pinata into the .env file `echo "pinataJwtToken=eyJhbGc..." >> .env`
+1. `cd ..`
+1. `npm run start:taqueria:local`
+1. `npm run apply`
+1. `npm run start:app`
+
+## Overview
+
+Mostly Rick/someone else knowledgeable about this should write this section
+
+## Requirements
+
+- Taqueria v0.20.2 or later
+- Docker v20.10.12 or later
+- Node.js v16.17.1 or later
+- Temple Wallet (can be found [here](https://templewallet.com/))
+- A funded testnet account (instructions [here](https://taqueria.io/docs/config/networks/#faucets))
+
+## Using the Project
+
+# Rick/someone else to define what the intended workflow is
+
+The intended workflow for this project is as follows:
+
+1. 
+
+## Project Overview
+
+### Scaffold the Project
+
+This project is available as a Taqueria scaffold. To create a new project from this scaffold, run the following command:
 
 ```shell
-cd nft-quickstart/taqueria
+taq scaffold https://github.com/ecadlabs/taqueria-scaffold-nft nft-scaffold
 ```
 
-3. Create the file `.env` inside the `/taqueria` directory
+This will clone the NFT scaffold project into a directory called `nft-scaffold`
+
+### Project Setup 
+
+1. Change into the `/taqueria` directory inside the newly created project directory:
+
+```shell
+cd nft-scaffold/taqueria
+```
+
+1. Create the file `.env` inside the `/taqueria` directory
 
 ```shell
 touch .env
