updated to as far as I think I can without the intended workflow and info on the react dApp

--- a/website/docs/scaffolds/nft-scaffold.mdx
+++ b/website/docs/scaffolds/nft-scaffold.mdx
@@ -133,3 +133,36 @@ Use the Dapp (served in your browser at [http://localhost:3000](http://localhost
     - `taqueria/assets`
         - The NFT assets to upload
 
+### React Dapp
+
+SECTION SHOULD HAVE INFO ON REACT DAPP AND I DON'T KNOW WHAT TO PUT HERE
+
+### Build and Start the React Dapp
+
+Change into the `/app` directory:
+
+```shell
+cd app
+```
+
+Build the React dApp:
+
+```shell
+npm run build
+```
+
+Start and serve the dApp:
+
+```shell 
+npm run start
+```
+
+You should now be able to access the NFT scaffold dApp at [http://localhost:3000](http://localhost:3000/)
+
+### Connect to Temple Wallet
+
+Open a browser and navigate to [http://localhost:3000](http://localhost:3000/)
+
+Click on the `Connect wallet` button in the top right corner of the page and select `Temple Wallet`
+
+Provide your credentials for the wallet, select a funded account, and click `connect`
