Revert "Add ghostnet as a pre-configured testnet (#1316)"
This reverts commit 124fb1e5a1b7f8548165cfd9eb9be5ccb57fbced.

--- a/website/docs/config/implicit-accounts.mdx
+++ b/website/docs/config/implicit-accounts.mdx
@@ -21,14 +21,6 @@ The default Taqueria `config.json` provides 5 accounts as shown here:
         "default": "development",
         "development": {
             "networks": [],
-            "sandboxes": [
-                "local"
-            ]
-        },
-        "testing": {
-            "networks": [
-                "ghostnet"
-            ],
             "sandboxes": []
         }
     },
@@ -39,12 +31,7 @@ The default Taqueria `config.json` provides 5 accounts as shown here:
             "rpcUrl": "http://localhost:20000"
         }
     },
-    "network": {
-        "ghostnet": {
-            "label": "ghostnet",
-            "rpcUrl": "https://ghostnet.ecadinfra.com"
-        }
-    },
+    "network": {},
     "accounts": {
         "bob": "3_000_000_000",
         "alice": "3_000_000_000",
@@ -73,13 +60,10 @@ These accounts will be created and funded automatically when a sandbox starts. A
             "networks": [],
             "sandboxes": [
                 "local"
-            ]
-        },
-        "testing": {
-            "networks": [
-                "ghostnet"
             ],
-            "sandboxes": []
+            "storage": {
+                "example.tz": 42
+            }
         }
     },
     "sandbox": {
@@ -101,12 +85,7 @@ These accounts will be created and funded automatically when a sandbox starts. A
             "rpcUrl": "http://localhost:20000"
         }
     },
-    "network": {
-        "ghostnet": {
-            "label": "ghostnet",
-            "rpcUrl": "https://ghostnet.ecadinfra.com"
-        }
-    },
+    "network": {},
     "accounts": {
         "bob": "3_000_000_000",
         "alice": "3_000_000_000"
