--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -39,7 +39,7 @@ Your network configuration should now look like the following:
    "network":{
       "ghostnet":{
          "label":"Ghostnet Protocol Testnet",
-         "rpcUrl":"https://ghostnet.ecadinfra.com",
+         "rpcUrl":"https://rpc.ghostnet.teztnets.xyz",
          "protocol":"PtKathmankSpLLDALzWw7CGD2j2MtyveTwboEYokqUCP4a1LxMg",
          "faucet":{
             "pkh": "tz1SrwfccRGEM74T8GLXVzPZAaVk7WjoMPok",
