--- a/website/docs/config/sandbox-config.mdx
+++ b/website/docs/config/sandbox-config.mdx
@@ -58,7 +58,8 @@ Once created, sandboxes can be added to environments by adding the `sandboxName`
             sandboxes: [
                 'local',
                 'myCustomSandbox'
-            ]
+            ],
+            storage: {},
         },
     },
 ```
